feat: basic hello world functional

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>React and Webpack4</title>
+        <title>React SPA</title>
+        <script type="module" src="/src/main.jsx"></script>
     </head>
     <body>
-        <div id="index">Hello World</div>
+        <div id="root"></div>
     </body>
 </html>
