--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>React SPA</title>
-        <script type="module" src="/src/main.jsx"></script>
     </head>
     <body>
         <div id="root"></div>
